.svn/pristine/63/6370d6e937bc23b6ae71d5fccfa996c81c4a8af7.svn-base
Grading r1838 by penggu2 committed on Fri Jan 20 10:44:13 CST 2017
Monad Autograder
Testing lab_intro at 2017-01-23 00:22:08

"Don't beg. Earn it. Then it will be granted to you." ~ Adroc Thurston

Setting up test environment...
Compiling...
================================================================
In file included from unit_tests.cpp:7:
In file included from ./png.h:25:
./rgbapixel.h:13:2: error: #endif without #if
#endif
 ^
unit_tests.cpp:84:12: error: no matching constructor for initialization of 'RGBAPixel'
        RGBAPixel red;
                  ^
./rgbapixel.h:4:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class RGBAPixel{
      ^
./rgbapixel.h:4:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
./rgbapixel.h:7:2: note: candidate constructor not viable: requires 3 arguments, but 0 were provided
        RGBAPixel (uint8_t red, uint8_t green,uint8_t blue);
        ^
2 errors generated.
In file included from rgbapixel.cpp:1:
./rgbapixel.h:13:2: error: #endif without #if
#endif
 ^
rgbapixel.cpp:3:12: error: unexpected parenthesis after '::'
RGBAPixel::(RGBAPixel(){
           ^
rgbapixel.cpp:3:13: error: out-of-line definition of 'RGBAPixel' does not match any declaration in 'RGBAPixel'
RGBAPixel::(RGBAPixel(){
            ^~~~~~~~~
3 errors generated.
make: *** [rgbapixel.o] Error 1
make: *** Waiting for unfinished jobs....
In file included from main.cpp:8:
./rgbapixel.h:13:2: error: #endif without #if
#endif
 ^
In file included from main.cpp:9:
In file included from ./png.h:25:
./rgbapixel.h:4:7: error: redefinition of 'RGBAPixel'
class RGBAPixel{
      ^
./rgbapixel.h:4:7: note: previous definition is here
class RGBAPixel{
      ^
In file included from main.cpp:9:
In file included from ./png.h:25:
./rgbapixel.h:13:2: error: #endif without #if
#endif
 ^
main.cpp:53:32: warning: unused parameter 'amount' [-Wunused-parameter]
PNG brighten(PNG original, int amount)
                               ^
main.cpp:74:37: warning: unused parameter 'secondImage' [-Wunused-parameter]
PNG blendImages(PNG firstImage, PNG secondImage)
                                    ^
main.cpp:101:15: error: no matching constructor for initialization of 'RGBAPixel'
    RGBAPixel cyanColor;
              ^
./rgbapixel.h:4:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class RGBAPixel{
      ^
./rgbapixel.h:4:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
./rgbapixel.h:7:2: note: candidate constructor not viable: requires 3 arguments, but 0 were provided
        RGBAPixel (uint8_t red, uint8_t green,uint8_t blue);
        ^
2 warnings and 4 errors generated.
make: *** [main.o] Error 1
In file included from unit_tests.cpp:7:
In file included from ./png.h:25:
./rgbapixel.h:13:2: error: #endif without #if
#endif
 ^
unit_tests.cpp:84:12: error: no matching constructor for initialization of 'RGBAPixel'
        RGBAPixel red;
                  ^
./rgbapixel.h:4:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class RGBAPixel{
      ^
./rgbapixel.h:4:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
./rgbapixel.h:7:2: note: candidate constructor not viable: requires 3 arguments, but 0 were provided
        RGBAPixel (uint8_t red, uint8_t green,uint8_t blue);
        ^
2 errors generated.
ld: no input files


Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

